--- a/ranking.html
+++ b/ranking.html
@@ -49,6 +49,67 @@
             <div class="col-xs-2">98/100</div>
             <div class="col-xs-3">　99.99%</div>
         </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4 my-text_xs_4"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>
+
     </div>
     <div id="integral">
         <div class="row ranking_titel">
